# strands-agents-deepresearch

./: .gitignore  README.md  invoke_runtime.py
deepresearch/: ai_safety_comprehensive_report.md  pyproject.toml  runtime.py  search_test_result.md
deepresearch/deepresearch/: __init__.py  config.py  main.py
deepresearch/deepresearch/prompts/: citations_agent.py
deepresearch/deepresearch/tools/: __init__.py  internet_search.py
deepresearch/deepresearch/utils/: s3_outputs.py  secrets.py  session.py  telemetry.py
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/modules/agentcore/: data.tf  iam.tf  locals.tf  main.tf  packaging.tf  s3.tf  secrets.tf  variables.tf
