[project]
name = "deepresearch"
version = "0.1.0"
description = "Deep research agent powered by Strands DeepAgents with web search capabilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=1.0.7",
    "linkup-sdk>=0.9.0",
    "strands-agents[otel]>=1.18.0",
    "strands-agents-tools>=0.2.16",
    "strands-deep-agents>=0.1.1",
    "langfuse>=3.10.1",
]
[dependency-groups]
dev = [
    "bedrock-agentcore-starter-toolkit>=0.1.34",
]
